--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "trelloyes",
+  "name": "league_of_leagues",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
+    "nodemon": "^2.0.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
@@ -15,6 +16,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "dev": "nodemon index.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
